// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test for Button Component should render Button  default theme 1`] = `
<div>
  <button
    class="sc-AxiKw jXfssU"
    type="submit"
  >
    <span
      class="sc-AxjAm eliavK"
    />
  </button>
</div>
`;

exports[`Test for Button Component should render Button  success theme 1`] = `
<div>
  <button
    class="sc-AxirZ Vhqeo"
    type="submit"
  />
</div>
`;

exports[`Test for Button Component should render Button  warning theme 1`] = `
<div>
  <button
    class="sc-AxirZ bULvc"
    type="submit"
  />
</div>
`;

exports[`Test for Button Component should render Button with dark theme 1`] = `
<div>
  <button
    class="sc-AxiKw dOcvua"
    type="submit"
  >
    <span
      class="sc-AxjAm eliavK"
    />
  </button>
</div>
`;
